# ffi_rpc

./: Cargo.toml  LICENSE  README.md
example/client1/: Cargo.toml
example/client1/src/: lib.rs
example/client1_interface/: Cargo.toml
example/client1_interface/src/: lib.rs
example/client2/: Cargo.toml
example/client2/src/: lib.rs
example/client2_interface/: Cargo.toml
example/client2_interface/src/: lib.rs
example/server/: Cargo.toml
example/server/src/: main.rs
example/server_interface/: Cargo.toml
example/server_interface/src/: lib.rs
ffi_rpc/: Cargo.toml
ffi_rpc/src/: lib.rs  plugin.rs  registry.rs
ffi_rpc_macro/: Cargo.toml
ffi_rpc_macro/src/: lib.rs
