[package]
name = "ffi_rpc_macro"
version = "0.5.2"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]
description = "Proc macros for ffi_rpc."
license = "MIT"
repository = "https://github.com/MXWXZ/ffi_rpc"

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"

[lib]
proc-macro = true
